# lottobot

./: .gitattributes  .gitignore  .mcp.json.example  CLAUDE.md  INSTALL.md  ROUTING.md  conftest.py  gen1.err  maine-scratch-ev-spec.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: agent.config  settings.json
.claude/agents/: grunt.md  implementer.md  planner.md  reviewer.md  spec-drafter.md
.claude/hooks/: gate.sh  verdict_lint.py
.github/workflows/: daily.yml
data/: games.json  latest.json
data/history/: 2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/schema/: latest.schema.json  panel_record.schema.json
docs/: CLAUDE.md.template  RUNBOOK.md  m6_semantics.md  openrouter_api_notes_wave2.md  openrouter_models_verified_2026-07-07.md  openrouter_models_verified_2026-07-09.md  openrouter_notes_wave3.md  pages_deploy.md  panel_integration.md  panel_prompt_templates.md  ui_mockup_protocol.md
docs/mockups/: best_pick_mockup.html  dashboard_mockup.html
panel/: README.md  __init__.py  adapters.py  asset_qa.py  attachments.py  cli.py  config.py  cost_meter.py  errors.py  orchestrator.py  prices.py  safe_retry.py  secrets.py
scraper/: __init__.py  build_panel.py  compute.py  games.py  run_daily.py  scrape.py  wayback_backfill.py
scripts/: atlas-mcp.cmd  harness.manifest.json  setup.py
site/: index.html
tests/: test_harness_smoke.py  test_packaging.py  test_panel_routing_docs.py
(+159 files in other folders)
