[project]
name = "panel-satellite"
version = "0.0.0"
description = "Headless multi-model panel harness - a tool the v4 routed agent system calls at plan/spec and QA gates."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode: import test modules by path without prepending their dirs to
# sys.path, so tests/panel/ (a package named 'panel') cannot shadow the real
# top-level panel/ package. -m 'not live' keeps the paid live smoke out of the gate.
addopts = "-q -m 'not live' --import-mode=importlib"
pythonpath = ["."]
markers = [
    "live: opt-in real OpenRouter call, costs money, requires OPENROUTER_API_KEY (run with -m live)",
]
